# Machikoro_cpp_project

./: README.en.md  README.md  玩家游玩交互流程
Machikoro_cpp_Project/Code/: CMakeLists.txt  Card_1.0.cpp  Card_1.0.h  Card_2.0.cpp  Card_2.0.h  Constant.h  Controler.cpp  Controler.h  Player.cpp  Player.h  desk_1.0.cpp  desk_1.0.h  desk_2.0.cpp  desk_2.0.h  main.cpp  version.cpp  version.h
